// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/sbt/update .bumpPackageVersion() increments 1`] = `
"name := \\"test\\"
organization := \\"test-org\\"
version := \\"0.0.3\\"
"
`;

exports[`lib/manager/sbt/update .bumpPackageVersion() updates 1`] = `
"name := \\"test\\"
organization := \\"test-org\\"
version := \\"0.1.0\\"
"
`;
